--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,154 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
+    <header class="page-header">
+      <a class="page-header__logo" href="">
+        <img src="" class="page-header__logo-image" width="" height="" alt="Логотип CatEnergy">
+        <p class="page-header__logo-title"> <!-- Или это все одна картинка? -->
+          <span class="page-header__logo-title--bold">Cat</span> Energy
+        </p>
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a href="">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a href="">Каталог продукции</a>
+            </li>
+            <li class="site-list__item">
+              <a href="">Подбор программы</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+    <main class="page-main">
+      <h1 class="page-main__title">Функциональное питание для котов</h1>
+      <h2 class="page-main__subtitle">Занялся собой? Займись котом!</h2>
+      <section class="programms">
+        <a class="programms__choice" href="">Подобрать программу</a>
+        <ul class="programms__list training-list">
+          <li class="training-list__item">
+            <h2 class="training-list__title">
+              <span class="training-list__logo training-list__logo--slim"></span>Похудение
+            </h2>
+            <p class="training-list__description">
+              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+            </p>
+            <a class="training-list__details">Каталог Slim
+              <span class="training-list__goto"></span>
+            </a>
+          </li>
+          <li class="training-list__item">
+            <h2 class="training-list__title">
+              <span class="training-list__logo training-list__logo--pro"></span>Набор массы
+            </h2>
+            <p class="training-list__description">
+              Заработать авторитет среди дворовых котов и даже собак?
+              Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+            </p>
+            <a class="training-list__details">Каталог Pro
+              <span class="training-list__goto"></span>
+            </a>
+          </li>
+        </ul>
+      </section>
 
+      <section class="how-work">
+        <h1 class="how-work__title">Как это работает</h1>
+        <ul class="how-work__list property-list">
+          <li class="property-list__item">
+            <div class="property-list__logo property-list__logo--leaf"></div>
+            <p class="property-list__description">
+              Функциональное питание содержит только полезные питательные вещества.
+            </p>
+          </li>
+          <li class="property-list__item">
+            <div class="property-list__logo property-list__logo--boiling"></div>
+            <p class="property-list__description">
+              Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+            </p>
+          </li>
+          <li class="property-list__item">
+            <div class="property-list__logo property-list__logo--cutlery"></div>
+            <p class="property-list__description">
+              Замените один-два приема обычной еды на наше функциональное питание.
+            </p>
+          </li>
+          <li class="property-list__item">
+            <div class="property-list__logo property-list__logo--clock"></div>
+            <p class="property-list__description">
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="example">
+        <h2 class="example__title">Живой пример</h2>
+        <p class="example__description">
+          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+        </p>
+        <ul class="example__indicators index-list">
+          <li class="index-list__item">
+            <fieldset class="index-list__criterion">
+              <legend class="index-list__legend">Снижение веса</legend>
+              <span class="index-list__value">5 Кг</span>
+            </fieldset>
+          </li>
+          <li class="index-list__item">
+            <fieldset class="index-list__criterion">
+              <legend class="index-list__legend">Затрачено времени</legend>
+              <span class="index-list__value">60 дней</span>
+            </fieldset>
+          </li>
+        </ul>
+        <span class="example__spanding">Затраты на питание: 15 000 руб.</span>
+        <img class="example__photo" src="" width="" height="" alt="Пример внешнего вида кота">
+        <div class="example__condition status-bar">
+          <span class="status-bar__condition">Было</span>
+          <div class="status-bar__line"></div>
+          <span class="status-bar__condition">Стало</span>
+        </div>
+      </section>
+      <section class="contacts">
+        <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
+        <p class="contacts__address"> ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <img class="contacts__map-nojs" src="" width="" height="" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+        <iframe class="contacts__map" src=""></iframe>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <div class="page-footer__wrapper logo">
+        <a class="logo__link">
+          <p class="logo__title">
+            <span class="logo__title--bold">Cat</span> Energy
+          </p>
+        </a>
+      </div>
+      <div class="page-footer__wrapper">
+        <ul class="page-footer__social social-list">
+          <li class="social-list__item">
+            <a class="social-list__item--vk" href=""></a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__item--instagram" href=""></a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__item--fb" href=""></a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__wrapper copyright">
+        <a class="copyright__link" href="http://htmlacademy.ru">
+          <span class="copyright__text">HTML Academy</span>
+          <svg>Лого академии</svg>
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
