Исправил замечания и разметил каталог

--- a/source/index.html
+++ b/source/index.html
@@ -14,11 +14,11 @@
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
-            <li class="main-mav__item main-nav__item--active">
+            <li class="main-nav__item main-nav__item--active">
               <a href="">Главная</a>
             </li>
             <li class="main-nav__item">
-              <a href="">Каталог продукции</a>
+              <a href="catalog.html">Каталог продукции</a>
             </li>
             <li class="main-nav__item">
               <a href="">Подбор программы</a>
@@ -33,7 +33,7 @@
       <h2 class="page-main__subtitle">Занялся собой? Займись котом!</h2>
       <section class="programms">
         <a class="programms__choice" href="">Подобрать программу</a>
-        <article class="programms__list training">
+        <article class="programms__item training">
           <div class="training__logo training__logo--slim"></div>
           <h2 class="training__title">Похудение</h2>
           <p class="training__description">
@@ -41,7 +41,7 @@
           </p>
           <a class="training__link">Каталог Slim</a>
         </article>
-        <article class="programms__list training">
+        <article class="programms__item training">
           <div class="training__logo training__logo--pro"></div>
           <h2 class="training__title">Набор массы</h2>
           <p class="training__description">
@@ -121,6 +121,7 @@
     <footer class="page-footer">
       <a class="page-footer__wrapper">
         <svg class="page-footer__wrapper-logo logo-text"></svg>
+      </a>
       <div class="page-footer__wrapper">
         <ul class="page-footer__social social-list">
           <li class="social-list__item">
@@ -134,9 +135,9 @@
           </li>
         </ul>
       </div>
-      <a class="page-footer__wrapper" href="http://htmlacademy.ru">
-        <span class="page-footer__wrapper-copytext">HTML Academy</span>
-        <svg class="page-footer__wrapper-copylogo">Лого академии</svg>
+      <a class="page-footer__copyright" href="http://htmlacademy.ru">
+        <span class="page-footer__copytext">HTML Academy</span>
+        <svg class="page-footer__copylogo">Лого академии</svg>
       </a>
     </footer>
   </body>
