--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo" href="">
+      <a class="page-header__logo" href="index.html">
         <img src="" class="page-header__logo-image" width="" height="" alt="Логотип CatEnergy">
         <svg class="page-header__logo-text logo-text"></svg>
       </a>
@@ -14,11 +14,11 @@
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
-            <li class="main-nav__item ">
+            <li class="main-nav__item">
               <a href="index.html">Главная</a>
             </li>
             <li class="main-nav__item main-nav__item--active">
-              <a href="#">Каталог продукции</a>
+              <a>Каталог продукции</a>
             </li>
             <li class="main-nav__item">
               <a href="">Подбор программы</a>
@@ -33,111 +33,119 @@
         <h1 class="page-main__title">Каталог продукции</h1>
         <ul class="page-main__list production">
           <li class="production__item">
-            <div class="production__photo">
-              <img class="production__photo-img" src="" width="" height="" alt="Cat Energy Pro 500г курица">
-            </div>
-            <h2 class="production__title">Cat Energy Pro 500 г</h2>
+            <a class="production__link-img" href="about-chicken500.html">
+              <img class="production__photo" src="" width="" height="" alt="Cat Energy Pro 500г курица">
+            </a>
+            <a class="production__link-title" href="about-chicken500.html">
+              <h2 class="production__title">Cat Energy Pro 500 г</h2>
+            </a>
             <p class="production__options">Объем Вкус Цена</p>
             <p class="production__value">500 г Курица 700 Р.</p>
-            <a class="production__order" href="">Заказать</a>
+            <a class="production__order" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
-            <div class="production__photo">
-              <img class="production__photo-img" src="" width="" height="" alt="Cat Energy Pro 1000г курица">
-            </div>
-            <h2 class="production__title">Cat Energy Pro 1000 г</h2>
+            <a class="production__link-img" href="about-chicken1000.html">
+              <img class="production__photo" src="" width="" height="" alt="Cat Energy Pro 1000г курица">
+            </a>
+            <a class="production__link-title" href="about-chicken1000.html">
+              <h2 class="production__title">Cat Energy Pro 1000 г</h2>
+            </a>
             <p class="production__options">Объем Вкус Цена</p>
             <p class="production__value">1000 г Курица 1000 Р.</p>
-            <a class="production__order" href="">Заказать</a>
+            <a class="production__order" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
-            <div class="production__photo">
-              <img class="production__photo-img" src="" width="" height="" alt="Cat Energy Pro 500г рыба">
-            </div>
-            <h2 class="production__title">Cat Energy Pro 500 г</h2>
+            <a class="production__link-img" href="about-fish500.html">
+              <img class="production__photo" src="" width="" height="" alt="Cat Energy Pro 500г рыба">
+            </a>
+            <a class="production__link-title" href="about-fish500.html">
+              <h2 class="production__title">Cat Energy Pro 500 г</h2>
+            </a>
             <p class="production__options">Объем Вкус Цена</p>
             <p class="production__value">500 г Рыба 700 Р.</p>
-            <a class="production__order" href="">Заказать</a>
+            <a class="production__order" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
-            <div class="production__photo">
-              <img class="production__photo-img" src="" width="" height="" alt="Cat Energy Pro 1000г рыба">
-            </div>
-            <h2 class="production__title">Cat Energy Pro 1000 г</h2>
+            <a class="production__link-img" href="about-fish1000.html">
+              <img class="production__photo" src="" width="" height="" alt="Cat Energy Pro 1000г рыба">
+            </a>
+            <a class="production__link-title" href="about-fish1000.html">
+              <h2 class="production__title">Cat Energy Pro 1000 г</h2>
+            </a>
             <p class="production__options">Объем Вкус Цена</p>
             <p class="production__value">1000 г Рыба 1000 Р.</p>
-            <a class="production__order" href="">Заказать</a>
+            <a class="production__order" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
-            <div class="production__photo">
-              <img class="production__photo-img" src="" width="" height="" alt="Cat Energy Slim 500г гречка">
-            </div>
-            <h2 class="production__title">Cat Energy Slim 500 г</h2>
+            <a class="production__link-img" href="about-buckwheat500.html">
+              <img class="production__photo" src="" width="" height="" alt="Cat Energy Slim 500г гречка">
+            </a>
+            <a class="production__link-title" href="about-buckwheat500.html">
+              <h2 class="production__title">Cat Energy Slim 500 г</h2>
+            </a>
             <p class="production__options">Объем Вкус Цена</p>
             <p class="production__value">500 г Гречка 400 Р.</p>
-            <a class="production__order" href="">Заказать</a>
+            <a class="production__order" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
-            <div class="production__photo">
-              <img class="production__photo-img" src="" width="" height="" alt="Cat Energy Slim 1000г гречка">
-            </div>
-            <h2 class="production__title">Cat Energy Slim 1000 г</h2>
+            <a class="production__link-img" href="about-buckwheat1000.html">
+              <img class="production__photo" src="" width="" height="" alt="Cat Energy Slim 1000г гречка">
+            </a>
+            <a class="production__link-title" href="about-buckwheat1000.html">
+              <h2 class="production__title">Cat Energy Slim 1000 г</h2>
+            </a>
             <p class="production__options">Объем Вкус Цена</p>
             <p class="production__value">1000 г Гречка 700 Р.</p>
-            <a class="production__order" href="">Заказать</a>
+            <a class="production__order" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
-            <div class="production__photo">
-              <img class="production__photo-img" src="" width="" height="" alt="Cat Energy Slim 500г рис">
-            </div>
-            <h2 class="production__title">Cat Energy Slim 500 г</h2>
+            <a class="production__link-img" href="about-rice500.html">
+              <img class="production__photo" src="" width="" height="" alt="Cat Energy Slim 500г рис">
+            </a>
+            <a class="production__link-title" href="about-rice500.html">
+              <h2 class="production__title">Cat Energy Slim 500 г</h2>
+            </a>
             <p class="production__options">Объем Вкус Цена</p>
             <p class="production__value">500 г Рис 500 Р.</p>
-            <a class="production__order" href="">Заказать</a>
+            <a class="production__order" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
             <h2 class="production__title">Показать еще 100500 товаров</h2>
             <p class="production__more">На самом деле вкусов гораздо больше!</p>
-            <a class="production__order production__order--grey" href="">Показать все</a>
+            <a class="production__order production__order--grey" href="new-prodution.html">Показать все</a>
           </li>
         </ul>
       </section>
 
-
-
-
     </main>
     <footer class="page-footer">
-      <a class="page-footer__wrapper">
+      <a class="page-footer__wrapper" href="index.html">CAT Energy<!--чтобы было на что жмакать, потом удалю -->
         <svg class="page-footer__wrapper-logo logo-text"></svg>
       </a>
       <div class="page-footer__wrapper">
         <ul class="page-footer__social social-list">
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--vk" href=""></a>
+            <a href="http://vk.com" target="_blank">vk</a>
           </li>
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--instagram" href=""></a>
+            <a href="http://instagram.com" target="_blank">inst</a>
           </li>
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--fb" href=""></a>
+            <a href="http://fb.com" target="_blank">fb</a>
           </li>
         </ul>
       </div>
-      <a class="page-footer__copyright" href="http://htmlacademy.ru">
-        <span class="page-footer__copytext">HTML Academy</span>
-        <svg class="page-footer__copylogo">Лого академии</svg>
+      <a class="page-footer__copyright" href="http://htmlacademy.ru" target="_blank">
+        <span>HTML Academy</span>
+        <svg>Лого академии</svg>
       </a>
     </footer>
   </body>
 </html>
-
-
-
