Удаляю последствия невнимательности

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <a class="page-header__logo" href="index.html">
         <img src="" class="page-header__logo-image" width="" height="" alt="Логотип CatEnergy">
-        <svg class="page-header__logo-text logo-text"></svg>
+        <svg class="page-header__logo-text"></svg>
       </a>
       <nav class="page-header__nav main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -21,7 +21,7 @@
               <a>Каталог продукции</a>
             </li>
             <li class="main-nav__item">
-              <a href="">Подбор программы</a>
+              <a href="programs.html">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -126,8 +126,8 @@
 
     </main>
     <footer class="page-footer">
-      <a class="page-footer__wrapper" href="index.html">CAT Energy<!--чтобы было на что жмакать, потом удалю -->
-        <svg class="page-footer__wrapper-logo logo-text"></svg>
+      <a class="page-footer__logo" href="index.html">CAT Energy<!--чтобы было на что жмакать, потом удалю -->
+        <svg class="page-footer__logo-svg"></svg>
       </a>
       <div class="page-footer__wrapper">
         <ul class="page-footer__social social-list">
