--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <a class="page-header__logo" name="top">
         <img src="" class="page-header__logo-image" width="" height="" alt="Логотип CatEnergy">
-        <svg class="page-header__logo-text logo-text"></svg>
+        <svg class="page-header__logo-text"></svg>
       </a>
       <nav class="page-header__nav main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -21,7 +21,7 @@
               <a href="catalog.html">Каталог продукции</a>
             </li>
             <li class="main-nav__item">
-              <a href="">Подбор программы</a>
+              <a href="programs.html">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -31,10 +31,10 @@
     <main class="page-main">
       <h1 class="page-main__title">Функциональное питание для котов</h1>
       <h2 class="page-main__subtitle">Занялся собой? Займись котом!</h2>
-      <section class="programms">
+      <section class="programs">
         <h2 class="visually-hidden">Программы питания</h2>
-        <a class="programms__choice" href="">Подобрать программу</a>
-        <article class="programms__item training">
+        <a class="programs__choice" href="programs.html">Подобрать программу</a>
+        <article class="programs__item training">
           <div class="training__logo training__logo--slim"></div>
           <h2 class="training__title">Похудение</h2>
           <p class="training__description">
@@ -42,7 +42,7 @@
           </p>
           <a class="training__link">Каталог Slim</a>
         </article>
-        <article class="programms__item training">
+        <article class="programs__item training">
           <div class="training__logo training__logo--pro"></div>
           <h2 class="training__title">Набор массы</h2>
           <p class="training__description">
@@ -120,8 +120,8 @@
 
     </main>
     <footer class="page-footer">
-      <a class="page-footer__wrapper" href="#top">CAT Energy<!--чтобы было на что жмакать, потом удалю -->
-        <svg class="page-footer__wrapper-logo logo-text"></svg>
+      <a class="page-footer__logo" href="index.html">CAT Energy<!--чтобы было на что жмакать, потом удалю -->
+        <svg class="page-footer__logo-svg"></svg>
       </a>
       <div class="page-footer__wrapper">
         <ul class="page-footer__social social-list">
