--- a/source/index.html
+++ b/source/index.html
@@ -120,7 +120,7 @@
 
     </main>
     <footer class="page-footer">
-      <a class="page-footer__logo" href="index.html">CAT Energy<!--чтобы было на что жмакать, потом удалю -->
+      <a class="page-footer__logo" href="#top">CAT Energy<!--чтобы было на что жмакать, потом удалю -->
         <svg class="page-footer__logo-svg"></svg>
       </a>
       <div class="page-footer__wrapper">
