Доразметил красные участки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -41,7 +41,7 @@
             </a>
             <p class="production__options">Объем Вкус Цена</p>
             <p class="production__value">500 г Курица 700 Р.</p>
-            <a class="production__order" href="form-order.html">Заказать</a>
+            <a class="production__order button" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
@@ -53,7 +53,7 @@
             </a>
             <p class="production__options">Объем Вкус Цена</p>
             <p class="production__value">1000 г Курица 1000 Р.</p>
-            <a class="production__order" href="form-order.html">Заказать</a>
+            <a class="production__order button" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
@@ -65,7 +65,7 @@
             </a>
             <p class="production__options">Объем Вкус Цена</p>
             <p class="production__value">500 г Рыба 700 Р.</p>
-            <a class="production__order" href="form-order.html">Заказать</a>
+            <a class="production__order button" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
@@ -77,7 +77,7 @@
             </a>
             <p class="production__options">Объем Вкус Цена</p>
             <p class="production__value">1000 г Рыба 1000 Р.</p>
-            <a class="production__order" href="form-order.html">Заказать</a>
+            <a class="production__order button" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
@@ -89,7 +89,7 @@
             </a>
             <p class="production__options">Объем Вкус Цена</p>
             <p class="production__value">500 г Гречка 400 Р.</p>
-            <a class="production__order" href="form-order.html">Заказать</a>
+            <a class="production__order button" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
@@ -101,7 +101,7 @@
             </a>
             <p class="production__options">Объем Вкус Цена</p>
             <p class="production__value">1000 г Гречка 700 Р.</p>
-            <a class="production__order" href="form-order.html">Заказать</a>
+            <a class="production__order button" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
@@ -113,17 +113,57 @@
             </a>
             <p class="production__options">Объем Вкус Цена</p>
             <p class="production__value">500 г Рис 500 Р.</p>
-            <a class="production__order" href="form-order.html">Заказать</a>
+            <a class="production__orde buttonr" href="form-order.html">Заказать</a>
           </li>
 
           <li class="production__item">
             <h2 class="production__title">Показать еще 100500 товаров</h2>
             <p class="production__more">На самом деле вкусов гораздо больше!</p>
-            <a class="production__order production__order--grey" href="new-prodution.html">Показать все</a>
+            <a class="production__order production__order--grey button" href="new-prodution.html">Показать все</a>
           </li>
         </ul>
       </section>
 
+      <section class="more-goods">
+        <h2 class="more-goods__title title">Дополнительные товары<hr></hr></h2>
+        <ul class="more-goods__list">
+          <li class="more-goods__item">
+            <h3 class="more-goods__item-title">Сахарозаменитель</h3>
+            <span class="more-goods_item-value">1 упаковка (100 г)</span>
+            <span class="more-goods__item-price">200 Р.</span>
+            <a class="more-goods__order button" href="form-order.html">Заказать</a>
+          </li>
+          <li class="more-goods__item">
+            <h3 class="more-goods__item-title">Питьевая вода</h3>
+            <span class="more-goods_item-value">5 литров</span>
+            <span class="more-goods__item-price">50 Р.</span>
+            <a class="more-goods__order button" href="form-order.html">Заказать</a>
+          </li>
+          <li class="more-goods__item">
+            <h3 class="more-goods__item-title">Молоко</h3>
+            <span class="more-goods_item-value">1 литр</span>
+            <span class="more-goods__item-price">100 Р.</span>
+            <a class="more-goods__order button" href="form-order.html">Заказать</a>
+          </li>
+          <li class="more-goods__item">
+            <h3 class="more-goods__item-title">Витамины</h3>
+            <span class="more-goods_item-value">1 упаковка (30 г)</span>
+            <span class="more-goods__item-price">300 Р.</span>
+            <a class="more-goods__order button" href="form-order.html">Заказать</a>
+          </li>
+        </ul>
+      </section>
+      <section class="order-all">
+        <a class="order-all__banner" href="form-order.html">
+          <p>Закажите все и получите чехол для кота в подарок!</p>
+        </a>
+      </section>
+      <section class="contacts">
+        <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
+        <p class="contacts__address"> ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <img class="contacts__map-nojs" src="" width="" height="" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+        <iframe class="contacts__map" src=""></iframe>
+      </section>
     </main>
     <footer class="page-footer">
       <a class="page-footer__logo" href="index.html">CAT Energy<!--чтобы было на что жмакать, потом удалю -->
