--- a/source/index.html
+++ b/source/index.html
@@ -83,7 +83,7 @@
         </ul>
       </section>
 
-      <!--<section class="example">
+      <section class="example">
         <h2 class="example__title title">Живой пример</h2>
         <p class="example__description">
           Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
@@ -116,7 +116,7 @@
         <p class="contacts__address"> ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         <img class="contacts__map-nojs" src="" width="" height="" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
         <iframe class="contacts__map" src=""></iframe>
-      </section> -->
+      </section>
 
     </main>
     <footer class="page-footer">
